<resources>
    <string name="app_name">乐视记录仪</string>
    <string name="base_activity_diglog_tip">温馨提示</string>
    <string name="base_activity_diglog_confirm">确定</string>
    <string name="base_activity_diglog_cancel">取消</string>
    <string name="base_activity_diglog_choose">选择</string>
    <string name="base_activity_loading_text">正在加载</string>
    <string name="click_page"><u>选择可供连接的行车记录仪</u></string>
    <string name="base_activity_not_scan_bt">没有发现可修改设备!</string>
    <string name="base_activity_loading_reset_pwd">重置密码中!</string>
    <string name="base_activity_toast_reset_pwd_sueccess">重置成功!</string>
    <string name="base_activity_toast_reset_pwd_failed">重置失败!</string>
    <string name="dialog_lable">重置密码</string>
    <string name="dialog_reset_pwd_check">你是否确定要重置密码!</string>
    <string name="dialog_reset_pwd_success">记录仪WIFI密码重置成功,重启记录仪生效！</string>
    <string name="str_lbl_reset_wifi_pwd">重置WIFI密码</string>
    <string name="btn_yes_lable">是</string>
    <string name="btn_no_lable">否</string>
    <string name="btn_close_lable">关闭</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_sd_card">记录仪没有存储卡</string>
    <string name="phone_and_camera_not_connect">手机未正确连接到记录仪</string>
    <string name="update_fail_server">服务器出错，更新失败，请稍后再试</string>
    <string name="update_fail_client">更新失败，请检查网络连接是否正常</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="upgrade_title"> 版本更新</string>
    <string name="upgrade_message_from_server">发现服务器有可更新的APP，是否更新？</string>
    <string name="upgrade_message_from_local">本地已下载好可更新APP，是否更新？</string>
    <string name="downloading_message">下载中...</string>
    <string name="cancel_download">取消</string>
    <string name="is_new">当前版本已经是最新</string>
    <string name="network_failed">网络错误,请重试</string>
    <string name="please_check_network">网络连接失败，请检查网络</string>
    <string name="not_connected_camera_error">还没连上行车记录仪，请连接上之后，再进行固件更新。</string>
    <string name="activity_details_up_count">共有 %1$s 人点赞</string>
    <string name="activity_details_comment_count">全部评论数 %1$s</string>
    <string name="you_not_have_up_file">您没有点赞的文件</string>
    <string name="you_not_have_share_file">您没有分享的文件</string>
    <string name="argument_text"><u>用户协议及免责声明</u></string>
    <string name="network_disable">网络连接失败，请您检查网络</string>
    <string name="other_phone_connected">已被其他手机连接</string>
    <string name="application_error">很抱歉,程序出现异常,即将退出</string>
    <string name="wifi_name">乐视行车记录仪</string>
    <string name="connect_fail">连接失败</string>
    <string name="notify_title">通知</string>
    <string name="notify_download">正在下载</string>
    <string name="notify_cancel">取消</string>
    <string name="about">关于记录仪</string>
    <string name="diglog_title">温馨提示</string>
    <string name="diglog_mess">记录仪SD卡没有正确安装</string>
    <string name="sd_store_loss">手机SD卡存储空间不足！</string>
    <string name="diglog_button">我知道了</string>
    <string name="camera_album">行车记录仪相册</string>
    <string name="onprogress">加载中....</string>
    <string name="show_toast_safe1">您选择的文件已保存在本地，请重新选择</string>
    <string name="show_toast_safe2">已将下载过的文件从下载列表中移除</string>
    <string name="show_toast_safe3">请选择要下载的文件</string>
    <string name="download_success">下载成功</string>
    <string name="download_success2">该文件已下载</string>
    <string name="download_item1">个 / 共</string>
    <string name="download_item2">个</string>
    <string name="storage_less">手机SD卡存储空间不足！</string>
    <string name="download_cancel">下载已取消，已下载</string>
    <string name="download_cacel1">下载已取消</string>
    <string name="download_error">下载出错，请检查网络设置</string>
    <string name="dialog_choose_file">请选择要删除的文件</string>
    <string name="dialog_choose_object">请选择要删除的对象</string>
    <string name="delete_ok">确定要删除吗？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete_finish">删除完成</string>
    <string name="delete">删除中...</string>
    <string name="gcing">清理中...</string>
    <string name="shareing">分享中...</string>
    <string name="loading">加载中...</string>
    <string name="nowloading">正在加载...</string>
    <string name="editing">修改中...</string>
    <string name="locationing">正在定位中...</string>
    <string name="deleteing">删除中...</string>
    <string name="gcfinish">清理完毕</string>
    <string name="gcfail">清理失败</string>
    <string name="idcard_name">记录仪存储卡</string>
    <string name="idcard_format">确定要格式化内存卡吗？</string>
    <string name="idcard_format_prograss">正在格式化存储卡</string>
    <string name="idcard_format_fail">格式化内存卡失败</string>
    <string name="idcard_format_success">格式化成功</string>
    <string name="idcard_loss">记录仪存储卡不存在</string>
    <string name="setting">通用设置</string>
    <string name="net_error">网络不可用!</string>
    <string name="video_error">获取视频详细信息失败</string>
    <string name="url_error">获取播放地址失败</string>
    <string name="url_error2">播放地址出错</string>
    <string name="input_null">输入不能为空</string>
    <string name="input_long">请输入3到140个字符</string>
    <string name="login_fail">登录失败</string>
    <string name="return_fail">返回失败</string>
    <string name="return_error">返回错误</string>
    <string name="black_list">您已被加入黑名单，请联系客服</string>
    <string name="now">刚刚</string>
    <string name="get_url_error">获取分享URL失败</string>
    <string name="return_url_error">服务其返回链接失败</string>
    <string name="server_error">对不起，服务器出现故障,请耐心等待</string>
    <string name="share_cancel">分享已取消</string>
    <string name="share_error">分享出错，请检查网络设置</string>
    <string name="find">发现</string>
    <string name="camera">记录仪</string>
    <string name="album">相册</string>
    <string name="choose">选择</string>
    <string name="photo_share">图片分享</string>
    <string name="video_share">视频分享</string>
    <string name="exit">再按一次退出程序</string>
    <string name="stoplink">您是否要断开与记录仪的连接？</string>
    <string name="installing_guide">安装指引</string>
    <string name="user_pro">用户协议及免责声明</string>
    <string name="lelink">乐视车联</string>
    <string name="lefans">乐迷社区</string>
    <string name="net_check">对不起，请检查网络链接</string>
    <string name="online_show">直播提示</string>
    <string name="localalbum">本地相册</string>
    <string name="localphoto">本地图片</string>
    <string name="localvideo">本地视频</string>
    <string name="no_find_device">没有找到设备</string>
    <string name="camera_set">记录仪设置</string>
    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="edit_set1">已将实时画面延时修改为1s</string>
    <string name="edit_set2">已将实时画面延时修改为2s</string>
    <string name="edit_set3">已将实时画面延时修改为3s</string>
    <string name="edit_failure">对不起，修改失败</string>
    <string name="edit_failure2">修改失败</string>
    <string name="edit_success2">修改成功</string>
    <string name="on_edit">正在修改</string>
    <string name="time_error">时间同步失败</string>
    <string name="time_suceess">时间同步成功</string>
    <string name="factory">恢复出厂设置</string>
    <string name="return_factory">确定要恢复出厂设置吗？</string>
    <string name="factory_success">恢复出厂设置成功</string>
    <string name="factory_fail">恢复出厂设置失败</string>
    <string name="new_password">修改密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password2">请输入确认密码</string>
    <string name="password_long">WIFI密码长度不能低于8位</string>
    <string name="password_noequal">两次输入密码不一致</string>
    <string name="is_password">是否要修改密码？</string>
    <string name="password_error2">密码设置失效</string>
    <string name="copy_success">复制链接成功!</string>
    <string name="no_weixin">您还未安装微信客户端</string>
    <string name="share_success">分享成功!</string>
    <string name="share_error2">分享出错!</string>
    <string name="share_cancel2">分享取消!</string>
    <string name="myshare">我的分享</string>
    <string name="mycommet">我的点赞</string>
    <string name="new_help">新手帮助</string>
    <string name="publish">发布</string>
    <string name="file_dir_error">文件路径不正确</string>
    <string name="get_mess">获取分类信息中...</string>
    <string name="get_mess_error">获取分类信息失败，请检查网络链接</string>
    <string name="server_fail">服务器出错</string>
    <string name="main_head">请您输入主题</string>
    <string name="file_dir_fail">文件路径出错</string>
    <string name="unknown">未知</string>
    <string name="image_upload_fail">图片上传失败！</string>
    <string name="login_error">对不起，登录失败，请检查网络连接</string>
    <string name="in_black_list">对不起，您已被加入黑名单</string>
    <string name="get_token_fail">获取token失败</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="no_upload_video">对不起，需要上传的视频不存在</string>
    <string name="transform_fail">转码失败</string>
    <string name="transform_success">转码成功</string>
    <string name="server_reurl_error">服务器返回链接失败</string>
    <string name="video_analy">视频解析中...</string>
    <string name="video_cut">视频裁剪</string>
    <string name="cut">裁剪</string>
    <string name="cuting">裁剪中...</string>
    <string name="myname">行车记录仪</string>
    <string name="please_net_check">请检查网络</string>
    <string name="server_busy">服务器繁忙</string>
    <string name="net_unknown">网络异常，请检查网络!</string>
    <string name="no_wifi_link">未连接</string>
    <string name="message">消息</string>
    <string name="passwork_incorrect">密码错误,请重新输入</string>
    <string name="link">连接</string>
    <string name="signal">%</string>
    <string name="passing">passing</string>
    <string name="take_photo_error">拍照失败</string>
    <string name="download_to_phone_error">文件下载到手机失败</string>
    <string name="take_photo_and_download">拍照成功并下载到手机</string>
    <string name="input_password_true">请输入正确的密码</string>
    <string name="video_play_error">该视频暂时无法播放，请刷新后再试</string>
    <string name="no_refresh">没有更新可用</string>
    <string name="mechine">已经下载了升级的固件，希望立即进行固件升级吗?</string>
    <string name="request_link">还没连上行车记录仪，请连接上之后，再进行固件更新。</string>
    <string name="request_sd">请确认记录仪的SD卡是否插好后再升级。</string>
    <string name="net_mess">当前网络为3/4G网络，</string>
    <string name="yes">确认</string>
    <string name="up_info">固件有更新包，是否下载,并且更新固件？</string>
    <string name="notify">提示:</string>
    <string name="error_info">非常抱歉！
您不能正常使用本软件，可能是以下原因所导致。
⒈未检测到你手机里的存储卡设备。
⒉软件经过其他人所修改导致安装文件时出错。

按确定退出本软件！ </string>
    <string name="error_info2">文件上传出错,请尝试重新启动应用或记录仪后再试。</string>
    <string name="upload_file_fail">文件上传失败</string>
    <string name="upload_file_success">文件上传成功</string>
    <string name="waitforstart">行车记录仪正在重启，估计需要几分钟，请听到“开始录像”的语音后，请重新进行连接。</string>
    <string name="upload_to_device">正在上传%s到行车记录仪</string>
    <string name="input_new_pass">输入新密码     </string>
    <string name="please_input_pass">请您输入密码</string>
    <string name="pass_sure">     确认密码    </string>
    <string name="pass_re_input">请您再次输入密码</string>
    <string name="input_theme">请输入主题</string>
    <string name="theme_long">主题不超过12中文字符</string>
    <string name="my_address">北京市姚家园</string>
    <string name="kind_choose">请选择发布的分类</string>
    <string name="tofriend">推荐</string>
    <string name="onlive">直播</string>
    <string name="sight">美景</string>
    <string name="passage">奇文</string>
    <string name="accident">事故</string>
    <string name="sunshine">曝光台</string>
    <string name="statement">申明和条款</string>
    <string name="welcome_to_use">您将使用乐视车联提供的乐视行车记录仪软件</string>
    <string name="please_read">，请阅读</string>
    <string name="protocol00">用户协议及免责声明。</string>
    <string name="protocol01">只有您接受本</string>
    <string name="protocol02">协议的所有条款，才能继续使用本软件。</string>
    <string name="no_notify">不再提示</string>
    <string name="aggree">同意并继续</string>
    <string name="exitnow">退出</string>
    <string name="link_first">请先连接行车记录仪</string>
    <string name="link_help">连接帮助</string>
    <string name="link1">1.点击下方“设置WIFI连接”</string>
    <string name="link2">2.查找并连接设备“乐视行车记录仪－XXXX”</string>
    <string name="link3">3.默认密码: 123456789</string>
    <string name="link4">4.返回APP,立即使用</string>
    <string name="link5">(提醒: 点击 “重置WIFI密码” 还原成初始密码)</string>
    <string name="link6">设置WIFI连接</string>
</resources>