<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/navigation_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <RelativeLayout
            android:id="@+id/rl_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView
                android:id="@+id/iv_thumb"
                android:layout_width="196dp"
                android:layout_height="110dp"
                android:src="@drawable/img_default" />

            <ProgressBar
                android:id="@+id/pb_progress_top"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="196dp"
                android:layout_height="110dp"
                android:progressDrawable="@drawable/progress_bar_top" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0%"
                android:textColor="@color/normal_text_color"
                android:textSize="16sp"
                android:visibility="gone" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pb_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="196dp"
            android:layout_height="2dp"
            android:layout_alignLeft="@id/rl_thumb"
            android:layout_below="@id/rl_thumb"
            android:progressDrawable="@drawable/progress_bar_bottom" />

        <EditText
            android:id="@+id/et_theme"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/rl_thumb"
            android:background="@color/local_gallery_activity_action_bar_bg"
            android:textCursorDrawable="@drawable/color_cursor"
            android:hint="@string/input_theme"
            android:maxLength="12"
            android:paddingLeft="5dp"
            android:textColor="#fff"
            android:textColorHint="@color/normal_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_theme"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/rl_thumb"
            android:gravity="center"
            android:text="@string/theme_long"
            android:textColor="@color/setting_activity_sub_text_color"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/location_icon"
        android:drawablePadding="10dp"
        android:text="@string/my_address"
        android:textColor="@color/grey_text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/kind_choose"
        android:textColor="@color/setting_activity_sub_text_color"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rg_classfy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="33dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_1"
            style="@style/classfy_raido_button"
            android:checked="true"
            android:text="@string/tofriend" />

        <RadioButton
            android:id="@+id/rb_2"
            style="@style/classfy_raido_button"
            android:layout_marginLeft="15dp"
            android:text="@string/onlive" />

        <RadioButton
            android:id="@+id/rb_3"
            style="@style/classfy_raido_button"
            android:layout_marginLeft="15dp"
            android:text="@string/sight" />

        <RadioButton
            android:id="@+id/rb_4"
            style="@style/classfy_raido_button"
            android:layout_marginLeft="-210dp"
            android:layout_marginTop="45dp"
            android:text="@string/passage" />

        <RadioButton
            android:id="@+id/rb_5"
            style="@style/classfy_raido_button"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/accident" />

        <RadioButton
            android:id="@+id/rb_6"
            style="@style/classfy_raido_button"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/sunshine" />
    </RadioGroup>

</LinearLayout>