<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_gray_bg">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/diaglog_activity_title_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/DialogText.Title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="11dp"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingTop="11dp"
            android:text="@string/statement" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="27dp"
        android:paddingTop="9dp"
        android:text="@string/welcome_to_use"
        android:textColor="#fff"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_line1"
        android:layout_below="@id/tv_line1"
        android:orientation="horizontal"
        android:paddingTop="9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_read"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol00"
            android:textColor="@color/home_activity_bottom_bar_checked"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol01"
            android:textColor="#fff"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_line2"
        android:layout_below="@id/ll_line2"
        android:paddingTop="9dp"
        android:text="@string/protocol02"
        android:textColor="#fff"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/cb_notify"
        style="@style/CustomCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_line1"
        android:layout_below="@id/tv_line3"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:drawablePadding="5dp"
        android:text="@string/no_notify"
        android:textColor="#fff"
        android:textSize="14sp" />

    <View
        android:id="@+id/v_1"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_below="@id/cb_notify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#1b1b1b" />

    <View
        android:id="@+id/v_11"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_below="@id/v_1"
        android:layout_centerHorizontal="true"
        android:background="#424242" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_11"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/aggree"
        android:textColor="@color/home_activity_bottom_bar_checked"
        android:textSize="16sp" />

    <View
        android:id="@+id/v_2"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_below="@id/tv_ok"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:background="#1b1b1b" />

    <View
        android:id="@+id/v_22"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_below="@id/v_2"
        android:layout_centerHorizontal="true"
        android:background="#424242" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_22"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/exitnow"
        android:textColor="#fff"
        android:textSize="14sp" />
</RelativeLayout>