<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lead_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="10dp"
    android:visibility="gone">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#313131">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/iv_lead_page_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/lead_page_icon"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_below="@id/iv_lead_page_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_white_solid"
                android:text="@string/link_first"
                android:textColor="#9a9a9a" />

        </RelativeLayout>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/link_help"
                android:textColor="@color/normal_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textSize="11sp"
                android:text="@string/link1"
                android:textColor="#888888" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="11sp"
                android:text="@string/link2"
                android:textColor="#888888" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="11sp"
                android:text="@string/link3"
                android:textColor="#888888" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="11sp"
                android:text="@string/link4"
                android:textColor="#888888" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/link5"
                android:textColor="#888888"
                android:textSize="11sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_go_wifi_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:background="@drawable/lead_page_button"
            android:textColor="@color/normal_text_color"
            android:layout_marginBottom="34dp"/>
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:drawablePadding="20dp"-->
            <!--android:drawableTop="@drawable/setting"-->
            <!--android:text="设置WIFI连接"-->
            <!--android:textColor="@color/normal_text_color"-->
            <!--android:textSize="15sp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/link6"
            android:layout_marginBottom="12dp"
            android:textColor="@color/normal_text_color"
            />


    </RelativeLayout>


</LinearLayout>