<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/background_color">

    <include layout="@layout/navigation_bar"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_new_pass"
            android:textColor="@color/normal_text_color"
            android:textSize="13sp"
            />
        <com.leautolink.leautocamera.ui.view.customview.EditTextWithDelete
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@color/setting_activity_item_background"
            android:gravity="center_vertical"
            android:textColor="#b5b5b5"
            android:textCursorDrawable="@null"
            android:hint="@string/please_input_pass"
            android:textSize="13sp"
            android:textColorHint="#b5b5b5"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_sure"
            android:textColor="@color/normal_text_color"
            android:textSize="13sp"
            />
        <com.leautolink.leautocamera.ui.view.customview.EditTextWithDelete
            android:id="@+id/et_sure_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@color/setting_activity_item_background"
            android:gravity="center_vertical"
            android:textColor="#b5b5b5"
            android:textCursorDrawable="@null"
            android:hint="@string/pass_re_input"
            android:textSize="13sp"
            android:textColorHint="#b5b5b5"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            />

    </LinearLayout>


    <Button
        android:id="@+id/bt_sure"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/normal_btn"
        android:text="@string/yes"
        android:textColor="@color/normal_text_color"/>

</LinearLayout>
